was attempting to do entirely too much, fixed logic, all buttons working, battle logic working, and quiz ready to submit

--- a/styles/robotStyling.css
+++ b/styles/robotStyling.css
@@ -3,13 +3,13 @@ body {
 }
 
 .battleground--image {
-  width: 40%;
-  height: 40%;
+  width: 20%;
+  height: 20%;
   margin: 2em;
 }
 
 #jax2 {
-  float: right;
+  float: left;
 }
 
 .stats {
@@ -17,10 +17,18 @@ body {
   background-color: white;
   text-align: center;
   border: 10px solid black;
-  width: 100%;
-  height: 300px;
+  width: 90%;
+  height: 200px;
   font-size: 1em;
   overflow: auto;
+}
+
+#playerHp{
+  margin-left : 5em;
+}
+
+#enemyHp{
+  margin-right: 5em;
 }
 
 .mid-player-stats{
@@ -29,7 +37,7 @@ body {
   text-align: center;
   border: 10px solid black;
   width: 100%;
-  height: 300px;
+  height: 200px;
   font-size: 1em;
   overflow: auto;
 }
